# chat-acp

./: AGENTS.md  LICENSE  README.md  dummy_agent.py  main.py  pyproject.toml  skills-lock.json
.agents/skills/long-running-jobs/: SKILL.md
.github/workflows/: lint.yml  test.yml
adapters/agent/: acp_stdio.py  jsonrpc.py
adapters/chat/: __init__.py  discord_bot.py  registry.py
adapters/chat/discord/: bot.py  config.py  platform.py
adapters/config/: file_config.py
cli/: chat.py  daemon.py  main.py  workspace.py
core/: exceptions.py  models.py  orchestrator.py  session_context.py
core/ports/: agent_client.py  chat_client.py  config.py  platform.py
tests/: test_agent_env.py  test_cli.py  test_config_migration.py  test_daemon.py  test_error_reporting.py  test_model_command.py  test_model_persistence.py  test_notifications.py  test_orchestrator.py  test_registry.py
