[project]
name = "chat-acp"
version = "0.1.0"
description = "Chat ACP - Bridge between AI agents and chat platforms"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "py-cord>=2.7.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
]

[project.scripts]
chat-acp = "cli.main:main"
chat-apc = "cli.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli", "core", "adapters"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.6",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
asyncio_default_fixture_loop_scope = "function"
